[package]
name = "actixweb"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio.workspace = true
thiserror = "2.0.9"
tokio-util = "0.7.13"
serde = { version = "1.0", features = ["derive", "std"] }
serde_json = "1.0.137"
tracing = { version = "0.1", features = ["attributes"]}
tracing-subscriber = { version = "0.3", features = ["chrono"]}