[package]
name = "webapp"
version = "0.1.0"
edition = "2021"


[features]
default = ["parser"]
parser = []

[dependencies]
axum = "0.7.9"
chrono = {version = "0.4.39", features = ["alloc"]}
minijinja = { version = "2.5.0", features = ["loader"]}
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
tokio.workspace = true
tokio-util = { version = "0.7.13", features = ["io"]}
tower = "0.5.2"
tower-http = {version="0.6.2", features = ["fs"]}
sfmacro = {path = "../sfmacro"}
